updated readme for executing controlsfx